fixed responsiveness so that text doesnt get cut off

--- a/assets/shopify_custom.css
+++ b/assets/shopify_custom.css
@@ -504,7 +504,7 @@ input.js--num {
 
 
 /* MEDIA QUERIES */
-@media (min-width: 1140px) { /* large tvs/screens */
+@media (min-width: 1400px) { /* large tvs/screens */
 	.main-content {
 	    padding-left: 25%;
 	    padding-right: 25%;
